Closure_170/evosuite/original/evosuite-report-org/test_build.log
cd /home/liumengjiao/Desktop/CI/Benchmark/../bugs/Closure_170_buggy && timeout 300000 javac -cp  /home/liumengjiao/Desktop/defects4j/framework/lib/test_generation/generation/evosuite-current.jar:build/classes/:lib/*  /home/liumengjiao/Desktop/CI/Evosuite/Closure_170/Closure/evosuite/0/com/google/javascript/jscomp/FlowSensitiveInlineVariables_ESTest.java /home/liumengjiao/Desktop/CI/Evosuite/Closure_170/Closure/evosuite/0/com/google/javascript/jscomp/FlowSensitiveInlineVariables_ESTest_scaffolding.java >> evosuite-report-org/test_build.log 2>&1

/home/liumengjiao/Desktop/CI/Evosuite/Closure_170/Closure/evosuite/0/com/google/javascript/jscomp/FlowSensitiveInlineVariables_ESTest.java:56: error: cannot find symbol
      Node node0 = Normalize.parseAndNormalizeTestCode(compiler0, "e2+\"1$;,&");
                            ^
  symbol:   method parseAndNormalizeTestCode(Compiler,String)
  location: class Normalize
/home/liumengjiao/Desktop/CI/Evosuite/Closure_170/Closure/evosuite/0/com/google/javascript/jscomp/FlowSensitiveInlineVariables_ESTest.java:59: error: cannot find symbol
      assertFalse(node0.isNE());
                       ^
  symbol:   method isNE()
  location: variable node0 of type Node
2 errors
